# sparkify-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: run.py
notebooks/: Sparkify.ipynb
