[tool.poetry]
name = "sparkify-project"
version = "0.1.0"
description = ""
authors = ["Yuki Nagae <yuki.nagae1130@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "*"
jupyter = "*"
seaborn = "*"
numpy = "*"
pandas = "*"
plotly = "*"
scipy = "*"
six = "*"
sklearn = "*"
pyspark = "*"
flake8 = "*"
autopep8 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
